<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="25dip"
    android:orientation="horizontal" >

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="left|center_vertical"
      android:layout_margin="5dip"
      android:src="@drawable/ic_launcher" />

  <TextView
      android:id="@+id/text_package_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_margin="5dp"
      android:text="@string/app_name"
      android:textSize="18sp" />

</LinearLayout>
<TextView 
    android:id="@+id/text_rights"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginBottom="2dip"
    
    android:textSize="13sp"/>

<TextView
    android:id="@+id/text_copyright"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dip"
    android:gravity="center_horizontal"
    android:text="@string/copyright_info"
    android:textSize="13sp" />

<TextView
    android:id="@+id/text_version"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/dash"
    android:textSize="13sp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dip"
    android:layout_marginTop="10dip"
    android:orientation="horizontal" >

<TextView
    android:id="@+id/label_imei_"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/label_imei"
    android:textSize="13sp" />

<TextView
    android:id="@+id/edit_imei"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:enabled="true"
    android:freezesText="true"
    android:gravity="center_horizontal"
    android:text="@string/dash"
    android:textSize="13sp" />

</LinearLayout>

</LinearLayout>
