<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        tools:context=".ListSendActivity" >

    <TextView
        android:id="@+id/msg_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/dash"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/msg_phone"
        android:ellipsize="end"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/sample_verylong_text"
        android:textColor="@color/text_color_gray" />

    <TextView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/dash"
        android:textColor="@color/text_color_blue" />

    <TextView
        android:id="@+id/msg_scan_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/msg_text"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/dash"
        android:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/msg_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/msg_text"
        android:ellipsize="start"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/sample_long_date"
        android:textColor="@color/text_color_gray" />

    <TextView
        android:id="@+id/msg_status_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/msg_text"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/msg_phone"
        android:text="@string/dash"
        android:textColor="@color/text_color_gray" />

    <TextView
        android:id="@+id/msg_sent_dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignRight="@+id/msg_delay"
        android:layout_below="@+id/msg_delay"
        android:text="TextView" />

    </RelativeLayout>

